# hyperSIS

./: .gitignore  README.md  colab.ipynb  example.edgelist  examples.ipynb  ford.md  fpm.toml  hyperSIS_sampling.md
.github/workflows/: python-publish.yml
app/: hyperSIS_sampling.f90
data/: example.bipartite
docs/: index.html  search.html
docs/interface/: hyperedge.html  network.html  proc_export_states.html  proc_net_state_gen.html  swap.html
docs/lists/: files.html  modules.html  procedures.html  types.html
docs/module/: hypersis_dynamics_base_mod.html  hypersis_dynamics_chooser_mod.html  hypersis_dynamics_hb_oga_mod.html  hypersis_dynamics_mod.html  hypersis_dynamics_nb_oga_mod.html  hypersis_kinds_mod.html  hypersis_network_io_mod.html  hypersis_network_mod.html  hypersis_program_common_mod.html
docs/proc/: check_export_nodes_and_edges_state.html  check_qs_method.html  count_integers_from_string.html  get_path_prefix.html  net_state_choose.html  network_export.html  network_import.html  read_network.html  set_dyn_params.html  set_initial_number_of_infected_nodes.html
docs/search/: search_database.json
docs/sourcefile/: common.f90.html  dynamics.f90.html  dynamics_base.f90.html  dynamics_chooser.f90.html  dynamics_hb_oga.f90.html  dynamics_nb_oga.f90.html  kinds.f90.html  network.f90.html  network_io.f90.html
docs/src/: common.f90  dynamics_base.f90  dynamics_chooser.f90  (+1 more)
example/: simple_network.f90
python/: MANIFEST.in  pyproject.toml  setup.py
python/hyperSIS/: __init__.py  core.py  io_utils.py  types.py
src/: network.f90  network_io.f90
(+14 files in other folders)
