[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperSIS"
version = "0.1.0"
description = "Python wrapper for hyperSIS Fortran simulations"
authors = [
  {name = "Wesley Cota", email = "wesley.cota@ufv.br"}
]
dependencies = [
  "numpy>=1.26",
  "xgi>=0.10",
  "fpm>=0.12.0"
]

[tool.setuptools.packages.find]
where = ["."]
